# moly-ai

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  fix_splash_dsl.py
.github/workflows/: claude-code-review.yml  page.yml  release.yml
ai-kit/: Cargo.toml
ai-kit/src/: lib.rs  prelude.rs  protocol.rs  utils.rs
book/src/: SUMMARY.md  crate-docs.md  improving.md  (+4 more)
docs/: migration-guide-old-to-splash.md  migration-guide.md  moly-handbook.md  moly-migration-handbook.md  overview.md  rust-api-changes.md  schema_evolution.md  splash-language-guide.md  splash-language-reference.md  splash-migration-guide.md  splash-patterns-and-examples.md  things-we-might-have-migrated-wrong.md
moly-kit/: Cargo.toml
moly-kit/examples/moly-mini/: Cargo.toml
moly-kit/examples/moly-mini/src/: app.rs  demo_chat.rs  meta.rs  ui.rs
moly-kit/src/: clients.rs  lib.rs  prelude.rs  protocol.rs  utils.rs  widgets.rs
moly-kit/src/clients/: deep_inquire.rs  map.rs  openai.rs  openai_image.rs  openai_realtime.rs  tester.rs
moly-kit/src/utils/: audio.rs  makepad.rs
moly-kit/src/utils/makepad/: hits.rs  ui_runner.rs
moly-kit/src/widgets/: attachment_list.rs  attachment_view.rs  attachment_viewer_modal.rs  avatar.rs  chat.rs  chat_line.rs  chat_lines.rs  citation.rs  citation_list.rs  image_view.rs  message_loading.rs  message_markdown.rs  message_thinking_block.rs  messages.rs  model_selector.rs  model_selector_item.rs  model_selector_list.rs  moly_modal.rs  prompt_input.rs  realtime.rs  slot.rs  standard_message_content.rs  stt_input.rs  theme_moly_kit_light.rs
moly-sync/: Cargo.toml
moly-widgets/: Cargo.toml
moly-zoo/: Cargo.toml
src/: app.rs
(+109 files in other folders)
