[package]
name = "moly-kit"
version = "0.2.3"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["rustls-tls"], default-features = false }
scraper = { version = "0.23.1" }
serde_json = { version = "1.0.135" }

futures = "0.3.31"
url = "2.4.10"
robius-open = { git = "https://github.com/project-robius/robius", rev = "a62b82c8" }
ai-kit = { path = "../ai-kit", features = ["full"] }

makepad-widgets = { git = "https://github.com/wyeworks/makepad", rev = "b8b65f4fa" }
makepad-code-editor = { git = "https://github.com/wyeworks/makepad", rev = "b8b65f4fa" }

cfg-if = "1.0.0"
log = "0.4"

