[package]
name = "moly-mini"
version = "0.2.5-rc1"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
makepad-widgets = { git = "https://github.com/makepad/makepad", rev = "a517b9cb4" }
moly-kit = { path = "../..", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
